--- a/src/scss/sections/_gallery.scss
+++ b/src/scss/sections/_gallery.scss
@@ -5,15 +5,15 @@
 
   &__list {
     display: grid;
-    grid-template-columns: minmax(360px, 1fr);
-    grid-template-rows: minmax(360px, 1fr);
+    grid-template-columns: minmax(360px);
+    grid-template-rows: minmax(360px);
 
     @media screen and (min-width: $bp-md) {
       grid-template-columns: repeat(4, 1fr);
     }
     @media screen and (min-width: xxl) {
-      grid-template-columns: repeat(4, minmax(480px, 1fr));
-      grid-template-rows: repeat(3, minmax(480px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(3, 1fr);
     }
   }
   &__item {
@@ -24,8 +24,13 @@
     }
 
     &--rect img {
-      height: 100%;
+      min-height: 360px;
+
       object-fit: cover;
+      @media screen and (min-width: $bp-md) {
+        aspect-ratio: 2/1;
+        min-height: auto;
+      }
     }
   }
 }
